name:                la-gui
version:             0.1.0.0
synopsis:            Extension to Lightarrow for GUI elements drawn in-frame
description:
  This package provides very basic GUI features to Lightarrow applications.
homepage:            https://github.com/linearity/la-gui#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          alex@das.li
copyright:           2020 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Graphics.UI.Lightarrow
                       Graphics.UI.Lightarrow.Common
                       Graphics.UI.Lightarrow.Modulate
                       Graphics.UI.Lightarrow.Slider
                       Graphics.UI.Lightarrow.Window
  default-extensions:  Arrows
                       BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       MultiParamTypeClasses
                       OverloadedStrings
                       PartialTypeSignatures
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeFamilies
                       TypeFamilyDependencies
                       TupleSections
  build-depends:       base >= 4.7 && < 5,
                       bearriver,
                       dunai,
                       lightarrow,
                       linear,
                       mtl,
                       optics